--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "gitlab-start-issue",
-  "version": "0.1.0",
-  "description":
-    "A small utility that let you choose your issue and creat associated branch and MR",
-  "main": "lib/index.js",
-  "author": "Hugo RAYNAL (raynalhugo@gmail.com)",
-  "license": "GPL",
-  "private": true,
-  "scripts": {
-    "build": "babel ./src -d lib",
-    "start": "node ./lib",
-    "babel-start": "babel-node ./lib"
-  },
-  "dependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "axios": "^0.18.0",
-    "bluebird": "^3.5.2",
-    "enquirer": "^1.0.3",
-    "fs-extra": "^7.0.0",
-    "inquirer-chalk-pipe": "^1.3.0",
-    "lodash": "^4.17.10",
-    "node-persist": "^3.0.1",
-    "nodegit": "^0.22.2",
-    "prompt-input": "^3.0.0",
-    "prompt-list": "^3.2.0"
-  }
+	"name": "gitlab-start-issue",
+	"version": "0.1.0",
+	"description": "A small utility that let you choose your issue and creat associated branch and MR",
+	"main": "lib/index.js",
+	"author": "Hugo RAYNAL (raynalhugo@gmail.com)",
+	"license": "GPL",
+	"private": true,
+	"scripts": {
+		"build": "babel ./src -d lib",
+		"start": "node ./lib",
+		"babel-start": "babel-node ./lib"
+	},
+	"dependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.2.2",
+		"@babel/node": "^7.2.2",
+		"@babel/plugin-transform-regenerator": "^7.0.0",
+		"@babel/plugin-transform-runtime": "^7.2.0",
+		"@babel/polyfill": "^7.2.5",
+		"@babel/preset-env": "^7.3.0",
+		"@babel/runtime": "^7.3.1",
+		"add": "^2.0.6",
+		"axios": "^0.18.0",
+		"bluebird": "^3.5.2",
+		"enquirer": "^1.0.3",
+		"fs-extra": "^7.0.0",
+		"inquirer-chalk-pipe": "^1.3.0",
+		"lodash": "^4.17.10",
+		"node-persist": "^3.0.1",
+		"nodegit": "^0.22.2",
+		"prompt-input": "^3.0.0",
+		"prompt-list": "^3.2.0",
+		"yarn": "^1.13.0"
+	}
 }
