--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "gitlab-start-issue",
 	"version": "0.1.0",
-	"description": "A small utility that let you choose your issue and creat associated branch and MR",
+	"description":
+		"A small utility that let you choose your issue and creat associated branch and MR",
 	"main": "lib/index.js",
 	"author": "Hugo RAYNAL (raynalhugo@gmail.com)",
 	"license": "GPL",
@@ -9,7 +10,8 @@
 	"scripts": {
 		"build": "babel ./src -d lib",
 		"start": "node ./lib",
-		"babel-start": "babel-node ./lib"
+		"babel-start": "babel-node ./lib",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@babel/cli": "^7.2.3",
@@ -26,6 +28,7 @@
 		"enquirer": "^1.0.3",
 		"fs-extra": "^7.0.0",
 		"inquirer-chalk-pipe": "^1.3.0",
+		"jest": "^24.0.0",
 		"lodash": "^4.17.10",
 		"node-persist": "^3.0.1",
 		"nodegit": "^0.22.2",
